<resources>
    <string name="app_name">SKYOURS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="alerts">Alerts</string>


    <string name="ok">OK</string>

    <string name="LocationMode">Your location from</string>
    <string name="GPS">GPS</string>
    <string name="Map">Map</string>
    <string name="Language">Language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="TemperatureUnit">Temperature</string>
    <string name="Kelvin">Kelvin (K°)</string>
    <string name="Kelvin2">°k</string>
    <string name="Celsius">Celsius (C°)</string>
    <string name="Celsius2">°c</string>
    <string name="Fahrenheit">Fahrenheit (F°)</string>
    <string name="Fahrenheit2">°F</string>
    <string name="windSpeed">"Wind Speed Unit "</string>
    <string name="meterSec">meter/sec</string>
    <string name="milesHour">miles/hour</string>

    <string name="add_alarm">Add New Alarm</string>
    <string name="hello_message" translatable="false">Hello IN SKYOURS</string>


    <string name="Humidity">Humidity</string>
    <string name="Preciption">Precipitation</string>
    <string name="Clouds">Clouds</string>
    <string name="Pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="uvi">UVI</string>
    <string name="Hourly">Hourly Forecast</string>
    <string name="DailyForecast">Daily Forecast</string>
    <string name="visibility">Visibility</string>
    <string name="favourit_screen">Your Fav Locations</string>
    <string name="StartDate">StartDate</string>
    <string name="EndDate">EndDate</string>
    <string name="ChooseLocation">Choose Location</string>
    <string name="Save">Save</string>
    <string name="title_activity_my_map">MyMap</string>
    <string name="addFav">addFav</string>
    <string name="Search">Search</string>


    <!-- Strings used for fragments for navigation -->


    <string name="title_activity_mpactivity">MPActivity</string>
    <string name="go_to_location_settings_dialog_title">Request to open location ٍsettings</string>
    <string name="go_to_location_settings_dialog_msg">please allow go to ٍsettings and open location </string>
    <string name="Details">Details</string>
    <string name="Hours48">48 Hours</string>
    <string name="wind_deg">Wind Degree</string>
    <string name="alert_screen_title">Your alerts</string>
    <string name="delete_confirm">Are you sure to delete this location?</string>
    <string name="delete_confirm_alert">Are you sure to delete this alert?</string>
    <string name="alertDialogTitle">Select location</string>
    <string name="selectedLocation">Selected Location</string>
    <string name="time">Time</string>
    <string name="exampleDate">7/7/2025</string>
    <string name="exampleTime">09:30</string>

    <string name="cancel">Cancel</string>
    <string name="weather_alarm">Weather Alarm</string>
    <string name="weather_desc">Weather Description</string>
    <string name="offline_mode">You are in ofline now</string>
    <string name="current_location">Current Location</string>
    <string name="notification">Notifications</string>

    <string name="title_save_current_loc">Save as Current Location</string>
    <string name="message_save_current_loc">Do you want to save this location as current location?</string>
    <string name="message_Location_saved">Location saved  </string>

    <string name="title_save_fav_loc">Save as Favorite Location</string>
    <string name="message_save_fav_loc">Do you want to save this location to favorite?</string>
    <string name="message_Location_canceld">Location canceld!!</string>


    <string name="title_delete_fav_loc">Delete from Favorite Locations</string>
    <string name="message_delete_fav_loc">Do you want to delete this location from favorite?</string>


    <string name="title_delete_alerts_loc">Delete from  your alerts</string>
    <string name="message_delete_alerts_loc">Do you want to delete this alerts?</string>

    <string name="message_Deletion_canceld">Deletion canceld!!</string>

    <string name="message_Deletion_Done">Deletion Done  </string>
    <string name="select_alert_lebal">Set Alerm</string>
    <string name="dailog_permission_title">SKYOURS PERMISSION</string>
    <string name="dailog_permission_message">Please allow the permissions</string>
    <string name="alert_notfication_message">There are no alerts fo today   </string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="new_alarm">Please fill all the fileds</string>


</resources>