<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        android:titleCondensed="@string/home" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        android:titleCondensed="@string/settings" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite"
        android:titleCondensed="@string/favorite" />
    <item
        android:id="@+id/alertsFragment"
        android:icon="@drawable/baseline_alarm_24"
        android:title="@string/alerts"
        android:titleCondensed="@string/alerts" />
</menu>

