<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/settingsFragment_nav"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Settings.View.SettingsFragment"
        tools:ignore="SpeakableTextPresentCheck">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/setting_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/settings"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"


                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/card"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/setting_label">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/lang_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/Language"

                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/rdBtnGroupLanguage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rdBtnArabic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/Arabic"
                                android:textSize="16dp"
                                 />

                            <RadioButton
                                android:id="@+id/rdBtnEnglish"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="16dp"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/English"
                                 />
                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLocationMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"


                    android:backgroundTint="@color/card"

                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardLanguage">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/loc_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/LocationMode"

                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="ExtraText" />

                        <RadioGroup
                            android:id="@+id/rdBtnGroupLocationMode"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <RadioButton
                                android:id="@+id/rdBtnGps"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/GPS"
                                android:textSize="16dp"
                                 />

                            <RadioButton
                                android:id="@+id/rdBtnMap"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/Map"
                                android:textSize="16dp"
                                 />
                        </RadioGroup>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardTemperatureUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"

                    android:backgroundTint="@color/card"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardLocationMode">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/temp_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/TemperatureUnit"

                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/rdBtnGroupTempratureUnit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/rdBtnKelvin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/Kelvin"
                                android:textSize="16dp"
                                />

                            <RadioButton
                                android:id="@+id/rdBtnCelsius"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/Celsius"
                                android:textSize="16dp"
                                />

                            <RadioButton
                                android:id="@+id/rdBtnFahrenheit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:textSize="16dp"
                                android:text="@string/Fahrenheit"
                                />
                        </RadioGroup>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:id="@+id/cardWindSpeedUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/card"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardTemperatureUnit">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/wind_sped_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/windSpeed"

                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/rdBtnGroupWindUnit"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/rdBtnMilesHour"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/milesHour"
                                android:textSize="16dp"
                                />

                            <RadioButton
                                android:id="@+id/rdBtnMeterSec"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:textSize="16dp"
                                android:text="@string/meterSec"
                                />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>




                <androidx.cardview.widget.CardView
                    android:id="@+id/cardNotifcation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/card"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardWindSpeedUnit">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/notifcation_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/notification"

                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/rdBtnGroupNotification"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:id="@+id/rdBtnNotification"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/notification"
                                android:textSize="16dp" />

                            <RadioButton
                                android:id="@+id/rdBtnAlerts"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/white"
                                android:minHeight="48dp"
                                android:text="@string/alerts"
                                android:textSize="16dp" />
                        </RadioGroup>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>





            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
